--- a/build-b.gradle
+++ b/build-b.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = 'cci'
-archivesBaseName = 'selenide-steps'
+archivesBaseName = 'selenide'
 version = '5.14.0-SNAPSHOT'
 
 ext {
@@ -26,11 +26,11 @@ compileJava.options.debugOptions.debugLevel = "source,lines,vars"
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 
-defaultTasks 'install'
+defaultTasks 'check', 'test', 'install'
 
 apply from: rootProject.file('gradle/source-sets.gradle')
 apply from: rootProject.file('gradle/dependencies.gradle')
-//apply from: rootProject.file('gradle/code-analysis.gradle')
-//apply from: rootProject.file('gradle/coverage.gradle')
-//apply from: rootProject.file('gradle/tests.gradle')
+apply from: rootProject.file('gradle/code-analysis.gradle')
+apply from: rootProject.file('gradle/coverage.gradle')
+apply from: rootProject.file('gradle/tests.gradle')
 apply from: rootProject.file('gradle/deploy-locally.gradle')
