--- a/build-b.gradle
+++ b/build-b.gradle
@@ -10,7 +10,7 @@ plugins {
   id 'org.sonarqube' version '3.0'
 }
 
-group = 'cci'
+group = 'com.codeborne'
 archivesBaseName = 'selenide'
 version = '5.14.0-SNAPSHOT'
 
@@ -33,4 +33,4 @@ apply from: rootProject.file('gradle/dependencies.gradle')
 apply from: rootProject.file('gradle/code-analysis.gradle')
 apply from: rootProject.file('gradle/coverage.gradle')
 apply from: rootProject.file('gradle/tests.gradle')
-apply from: rootProject.file('gradle/deploy-locally.gradle')
+apply from: rootProject.file('gradle/deploy.gradle')
