--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ defaultTasks 'install'
 
 apply from: rootProject.file('gradle/source-sets.gradle')
 apply from: rootProject.file('gradle/dependencies.gradle')
-apply from: rootProject.file('gradle/code-analysis.gradle')
-apply from: rootProject.file('gradle/coverage.gradle')
-apply from: rootProject.file('gradle/tests.gradle')
+//apply from: rootProject.file('gradle/code-analysis.gradle')
+//apply from: rootProject.file('gradle/coverage.gradle')
+//apply from: rootProject.file('gradle/tests.gradle')
 apply from: rootProject.file('gradle/deploy-locally.gradle')
