--- a/gradle/deploy-locally.gradle
+++ b/gradle/deploy-locally.gradle
@@ -4,7 +4,7 @@ jar {
       "Automatic-Module-Name": project.group + '.' + project.name,
       "Implementation-Title": project.group + '.' + project.name,
       "Implementation-Version": version,
-      "Implementation-Vendor": "IB"
+      "Implementation-Vendor": "Codeborne"
     )
   }
   from sourceSets.main.output
